# doxide

./: CMakeLists.txt  conanfile.txt  pixi.toml
cmake/: extract_ts_ids.cpp
src/: CppParser.cpp  CppQueries.hpp  cpp_query_enums.hpp.in  doxide.cpp
src/entities/: CodeInfo.cpp  CodeInfo.hpp  EnumEntity.hpp  FunctionEntity.hpp  NamespaceEntity.cpp  NamespaceEntity.hpp  RootEntity.cpp  RootEntity.hpp  TypeEntity.hpp  VariableEntity.hpp
test/: doxide.yaml
test/docs/: index.md
test/docs/agroup/: index.md
test/src/: f1.cpp
